# demo-keycloak

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  mypy.ini  pyproject.toml
backend_go/: auth.go  auth_test.go  main.go
backend_py/: auth.py  client.py  config.py  main.py
backend_py/tests/: client_test.py  decode_token_test.py
frontend/: app.js  index.html  package-lock.json
keycloak/: realm-export.json
